style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');

:root {
  --accent-color-1: #f9fafb;
  --accent-color-2: #3498db;
}

* {
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  font-family: 'Open Sans', 'sans-serif';
  color: #fff;
  margin: 0;
  padding: 0;
  overflow: hidden;
  letter-spacing: 1px;
  background-image: url('./img/ck.png');
  background-repeat: repeat;
  background-size: contain;
  background-position: center;
  background-blend-mode: overlay;
  height: 100vh;
  width: 100%;
  z-index: -1;
}

body::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  margin: 0;
}

body * {
  z-index: 1;
}

.content {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

h1 {
  font-size: 3.75em;
}

.location {
  margin-bottom: 1em;
  font-weight: normal;
  font-size: 2.5em;
}

.location-link {
  text-decoration: none;
  color: #fff;
}

.location-link:hover,
.location-link:focus {
  letter-spacing: 0.7px;
  font-weight: bold;
}

.countdown {
  display: none;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 2.5em;
  margin-bottom: 3em;
}

.time {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  padding: 0.5em 0.2em;
}

.time h2 {
  margin: 0;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  font-size: 11px;
  opacity: 0.6;
  visibility: hidden;
  width: 120px;
  background-color: #fff;
  color: black;
  text-align: center;
  padding: 5px 2px;
  border-radius: 6px;

  position: absolute;
  z-index: 1;
  bottom: 130%;
  left: 50%;
  margin-left: -60px;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

.phonetics {
  font-style: italic;
  font-size: 1em;
}

.noun {
  font-style: bold;
}

.newsletter {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  margin-bottom: 2.5em;
  align-items: center;
}

.newsletter label {
  font-size: 1.2em;
}

.newsletter input,
button {
  margin: 0.7em 0;
  outline: 0;
  border-radius: 6px;
  height: 2.5em;
  border: 0px solid;
  padding-left: 0.75em;
  font-family: inherit;
  width: 100%;
  font-size: 1.2em;
}

.newsletter button {
  color: #2e2d2d;
  background-color: var(--accent-color-1);
  font-weight: bold;
  transition: background-color 0.1s ease;
}

.newsletter button:hover,
.newsletter button:focus {
  background-color: var(--accent-color-2);
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
  border: 1px solid var(--accent-color-1);
  color: var(--accent-color-1);
}

.credits {
  font-size: 1.2em;
}

.credits a {
  text-decoration: none;
  color: inherit;
}

.credits a:hover,
.credits a:focus {
  font-weight: bold;
  letter-spacing: 0.7px;
}

/* @media only screen and (max-width: 1000px) {
  html {
    font-size: 14px;
  }
} */

@media only screen and (max-width: 850px) {
  html {
    font-size: 12px;
  }
}
@media only screen and (max-width: 750px) {
  html {
    font-size: 11px;
  }
}

@media only screen and (max-width: 400px) {
  html {
    font-size: 10px;
  }
  .countdown {
    font-size: 2em;
    margin-bottom: 1.8em;
  }
}

